--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
+    "husky": {
+      "hooks": {
+        "pre-commit": "CI=true npm test"
+      }
+    },
   "eslintConfig": {
     "extends": "react-app"
   },
