--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
-    "husky": {
+  "husky": {
       "hooks": {
-        "pre-commit": "CI=true npm test"
+        "pre-push": "npm test"
       }
     },
   "eslintConfig": {
