--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm test",
+      "pre-push": "CI=true npm test",
       "...": "..."
     }
   },
@@ -47,6 +46,7 @@
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2",
     "moxios": "^0.4.0"
